--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -21,7 +21,9 @@
     <div class="pay-title">
 
     </div>
-    <form action="#">
+    <!--/*@thymesVar id="orderDetails" type="com.jxau.kknq.bean.OrderDetails"*/-->
+    <form action="">
+        <input type="text" name="productNumber" value="hejiarang" style="border:0px;"/>
         <div  class="pay-body">
             <p class="f18 b p">订单详情</p>
             <table cellspacing="0" cellpadding="0" border="0">
@@ -39,7 +41,7 @@
                 <tbody>
                     <tr>
                         <td><a href="#"><img class="rt-img" style="width: 100px;height: 100px;"></a></td>
-                        <td><a href="#" class="rt-title">STARRY SKY星空</a></td>
+                        <td><a href="#" class="rt-title" id = "ptitle" name="productTitle">STARRY SKY星空</a></td>
                         <td>2.0磅 / 10份 标配餐具</td>
                         <td><span class="pri">308</span></td>
                         <td><div class="rt-sum"><a href="#" class="cut" onclick="javascript:cutNum()">-</a><input type="text" value="1" class="num1" id="countNumber" disabled><a href="#" onclick="javascript:addNum()" class="add">+</a></div></td>
@@ -82,11 +84,11 @@
             <p class="f18 b p">送货信息</p>
             <div class="deliver">
                 <ul>
-                    <li class="sub">联系方式：<input type="text" name="" placeholder="请输入正确的联系方式" maxlength="11"></li>
-                    <li>配送地址：<a href="#" class="active pay-location ml10" >添加配送地址</a></li>
-                    <li>配送方式：</li>
+                    <li class="sub">联系方式：<input type="text" name="" id="contact" placeholder="请输入正确的联系方式" maxlength="11"></li>
+                    <li>配送地址：<a href="#" class="active pay-location ml10" id="address">添加配送地址</a></li>
+                    <li>配送方式：<a href="#" class="active pay-deliverWay ml10" id="deliverWay">选择配送方式</a></li>
                     <li class="sub">配送时间：<input type="text"  id="J-xl" placeholder="默认只能接受下单后第二天配送" name="" value="">
-                        <select name="" id="start">
+                        <select name="" id="deliverStartTime">
                             <option value="">10:00</option>
                             <option value="">11:00</option>
                             <option value="">12:00</option>
@@ -98,7 +100,7 @@
                             <option value="">18:00</option>
                             <option value="">19:00</option>
                         </select>
-                        <select name="" id="end">
+                        <select name="" id="deliverEndTime">
                             <option value="">11:00</option>
                             <option value="">12:00</option>
                             <option value="">13:00</option>
@@ -133,12 +135,6 @@
         <div id="window-city">
             <div id="city-box">
                 <div class="bg">
-                    <!--<p>请选择生日牌类型</p>-->
-                    <!--<p><input type="radio" name="sr" value="中文生日快乐" checked>中文生日快乐</p>-->
-                    <!--<p><input type="radio" name="sr" value="英文生日快乐">英文生日快乐</p>-->
-                    <!--<p><input type="radio" name="sr" value="" class="inself">自定义-->
-                        <!--<input type="text" placeholder="最多10个字" class="text hide" maxlength="10"></p>-->
-                    <!--<p class="sub"><a href="#" type="button" class="confirm">确定</a><a href="#" type="button" class="cancel">取消</a></p>-->
                 </div>
             </div>
         </div>
@@ -254,6 +250,7 @@
                    }
                    $('.rt-img').attr('src',product.productImgUrl);
                    $('.rt-title').text(product.productTitle);
+                   $('.rt-title').html(product.productTitle);
                    $('.pri').text("¥ "+product.price);
                    $('#totalPrice').text("¥ "+product.price);
                    $('#initPrice').text(product.price);
@@ -262,26 +259,42 @@
                    $('#canjuPrice').text(canju);
                    $('#canjuTotalPrice').text("¥ 5");
                    $('#allPrice').text("¥ "+product.price);
-
-
-//                   $('.psmell').text(product.productSmell);
-//                   $('.psort').text(product.productSort);
-//                   $('.pmaterial').text(product.productTitle);
-//                   $('.addCar').html(`<a href="#" class="addCar" data-id="${product.productId}">加入购物车</a>`);
-//                   $('.index').html(product.productTitle);
-//                   $('#initPrice').text(product.price);
-
-                   //        修改商品详情信息（数据库还需搭建）
                }
         });
+
+
 
         //点击提交订单
         $('.rt').click(function (e) {
             e.preventDefault();
-            window.location.href="/kknq/orders?"+str;
+            if ($("#candle").is(":checked")){
+            }
+            var orderDetails ={
+                "productTitle" : document.getElementById("ptitle").textContent,
+                "productNumber":document.getElementById("countNumber").value,
+                "price":document.getElementById("initPrice").textContent,
+                "contact":document.getElementById("contact").value,
+                "address":document.getElementById("address").textContent,
+                "deliverWay":document.getElementById("address").textContent,
+                "deliverDate":document.getElementById("J-xl").value,
+                "deliverStartTime":$("#deliverStartTime option:selected").text(),
+                "deliverEndTime":$("#deliverEndTime option:selected").text(),
+                "candleNumber" : document.getElementById("countlazhuNumber").value,
+            }
+            $.ajax({
+               type: "POST",
+               url: "/kknq/send/order",
+               async : true,
+               contentType : "application/json",
+               data : JSON.stringify(orderDetails),
+               dataType: 'json',
+               success: function (response) {
+                   window.location.href="/kknq/orders";
+               }
+            });
         });
 
-        //点击提交订单
+        //点击返回上一页
         $('.ffaaaaa').click(function (e) {
             e.preventDefault();
             window.location.href="/kknq/details?"+str;
