修改数据库部分字段

--- a/src/main/resources/templates/centerPwd.html
+++ b/src/main/resources/templates/centerPwd.html
@@ -72,7 +72,7 @@
                     <ul class="pwd">
                         <li>
                             <label >用 户 名：</label>
-                            <b>yaya</b>
+                            <b>钟秋萍</b>
                         </li>
                         <li>
                             <label >原始密码：</label>
