--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -79,6 +79,41 @@
 <script th:href="@{/js/jquery.js}"></script>
 <script th:href="@{/js/common.js}"></script>
 <script>
+
+    $(function(){
+        init();
+//        初始化页面
+        var str = location.href; //取得整个地址栏
+        var num = str.indexOf("?");
+        str = str.substr(num+1);
+        $.ajax({
+               type:"GET",
+               url:"/kknq/get/cake",
+               data:str,
+               dataType: 'json',
+               success:function (response) {
+                   var json = JSON.stringify(response);
+                   var product = eval("("+json+")");
+                   if(product.type == 6 || product.type == 7){
+                       $('.rt-size').html('<a href="#" class="active">1.0磅</a>');
+                   }
+                   $('.rt-img').attr('src',product.productImgUrl);
+                   $('.rt-title').text(product.productTitle);
+                   $('.rt-info').text(product.productName);
+                   $('.rt-price').text("价格：¥ "+product.price+" RMB");
+                   $('.psmell').text(product.productSmell);
+                   $('.psort').text(product.productSort);
+                   $('.pmaterial').text(product.productTitle);
+                   $('.addCar').html(`<a href="#" class="addCar" data-id="${product.productId}">加入购物车</a>`);
+                   $('.index').html(product.productTitle);
+                   $('#initPrice').text(product.price);
+
+                   //        修改商品详情信息（数据库还需搭建）
+               }
+
+        });
+    });
+
     $('#N_cancel').click(function (e) {
         e.preventDefault();
         $('#window-city').css('display','block');
