--- a/src/main/resources/templates/centerPerson.html
+++ b/src/main/resources/templates/centerPerson.html
@@ -43,43 +43,43 @@
                         <tbody>
                         <tr>
                             <td width="101">用户名：</td>
-                            <td width="295">yaya</td>
+                            <td width="295"><p th:text="${#httpSession.getAttribute('username')}"></p></td>
                             <td width="101"></td>
                             <td width="262"></td>
                         </tr>
                         <tr>
                             <td>真实姓名：</td>
-                            <td><input type="text"  id="uname"></td>
+                            <td><input type="text"  id="realName" ></td>
                             <td>性别：</td>
-                            <td class="dan"><input type="radio" name="sex" value="female">女<input type="radio" name="sex" value="male">男 </td>
+                            <td class="dan"><input type="radio" name="sex" value="female">女<input type="radio" name="sex" id="SEX" value="male">男 </td>
                         </tr>
                         <tr>
                             <td>生日：</td>
-                            <td><input type="text" id="ubirth"></td>
+                            <td><input type="text" id="realBirthday" class="realBirthday"></td>
                             <td>联系电话：</td>
-                            <td><input id="phone" type="text" name="" value="" > </td>
+                            <td><input id="contactNumber" type="text" name="contactNumber" value="" > </td>
                         </tr>
                         <tr>
                             <td>联系地址：</td>
-                            <td><input id="location" type="text" ></td>
+                            <td><input id="address" type="text" class="address"></td>
                             <td>电子邮件：</td>
-                            <td><input id="email" type="text" name="" value=""> </td>
+                            <td><input id="email" type="text" name="email" class="email" value=""> </td>
                         </tr>
                         <tr>
                             <td>QQ：</td>
-                            <td><input id="qq" type="text"  ></td>
+                            <td><input id="QQ" type="text"  class="QQ"></td>
                             <td>微信：</td>
-                            <td><input id="weixin" type="text" name="" value=""> </td>
+                            <td><input id="weixin" type="text" name="" value=""class="weixin"> </td>
                         </tr>
                         <tr>
                             <td>微博：</td>
-                            <td><input id="weibo" type="text" ></td>
+                            <td><input id="weibo" type="text" class="weibo"></td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td><a href="#" type="submit" class="btn1">提交修改</a><a href="#" type="reset" class="btn1">清除重填</a></td>
+                            <td><a href="#" type="submit" class="btn1" id="modify">提交修改a</a><a href="#" type="reset" class="btn1">清除重填</a></td>
                             <td></td>
                             <td> </td>
                         </tr>
@@ -94,10 +94,46 @@
 
 <footer id="footer">
 </footer>
-<script th:href="@{/js/jquery.js}"></script>
-<script th:href="@{/js/common.js}"></script>
-<script>
 
+<script type="text/javascript" th:src="@{js/jquery.js}"></script>
+<script type="text/javascript" th:src="@{js/common.js}"></script>
+<script>
+    $(function(){
+        //点击提交修改
+        $('.btn1').click(function (e) {
+            alert("rrr")
+            e.preventDefault();
+            if ($("#candle").is(":checked")){
+            }
+            var str = location.href; //取得整个地址栏
+            var num = str.indexOf("=");
+            str = str.substr(num+1);
+            var username=
+            var user ={
+                "realName" : document.getElementById("realName").textContent,
+                "birthday":document.getElementById("realBirthday").value,
+                "telPhone":document.getElementById("contactNumber").textContent,
+                "contact":document.getElementById("contact").value,
+                "address":document.getElementById("address").textContent,
+                "email":document.getElementById("email").textContent,
+                "QQNumber":document.getElementById("QQ").textContent,
+                "weiChat":document.getElementById("weixin").textContent,
+                "weiBo" : document.getElementById("weibo").value,
+            }
+            $.ajax({
+                       type: "POST",
+                       url: "/kknq/modify/userfile",
+                       async : true,
+                       contentType : "application/json",
+                       data : JSON.stringify(user),
+                       dataType: 'json',
+                       success: function (response) {
+                           var json = JSON.stringify(response);
+                           var order = eval("("+json+")");
+                           window.location.href="/kknq/orders?id="+order;
+                       }});
+        });
+    });
 </script>
 </body>
 </html>
