--- a/src/main/resources/templates/pay_null.html
+++ b/src/main/resources/templates/pay_null.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>YummyCake定制属于您的专属蛋糕</title>
@@ -23,7 +23,7 @@
 <section id="section">
     <div class="pay_null">
         <p class="f20 b p">您的购物车还是空的，赶紧种草吧！</p>
-        <p>马上行动 <a href="products.html" class="active">全部商品</a> 挑选您最喜爱的商品</p>
+        <p>马上行动 <a th:href="@{/products}" class="active">全部商品</a> 挑选您最喜爱的商品</p>
     </div>
 </section>
 <footer id="footer">
