--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,8 @@
 </head>
 <body>
 <a name="top1"></a>
+
+
 <!--页面加载完成后的弹窗-->
     <div id="window-city">
         <div id="city-box">
@@ -134,7 +136,7 @@
                 </li>
                 <li class="Tclassfy-lf">
                     <dd class="L">
-                        <img src="images/gan01.jpg" />
+                        <img src="images/gan01.jpg" alt=""/>
                     </dd>
                    <!-- <dt>
                         <a href="#"><img src="images/wu02.jpg" /> </a>
@@ -176,13 +178,16 @@
         </div>
 
     </section>
+
 <!--页面底部购物指南等-->
     <footer id="footer">
     </footer>
 
 <script src="js/jquery.js"></script>
-<script src="js/common.js"></script>
 <script src="js/index.js" ></script>
+<script src="css/common.css"></script>
+<script src="js/common.js"></script>
+
 
 <script>
 
