--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -128,6 +128,7 @@
     $('.bg').on('click','#C_cancel',function (e) {
         e.preventDefault();
         $('#window-city').css('display','none');
+        window.location.href = "/kknq/now/saoma";
     });
     $('.bg').on('click','#C_confirm',function (e) {
         e.preventDefault();
