--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -117,7 +117,7 @@
             </div>
             <p class="f18 b p">付款方式</p>
             <div class="pay_way bg" id="wrap">
-                <input type="radio" name="pay" value="1" checked>支付宝
+                <input type="radio" name="pay" value="1" checked>微信
                 <input type="radio" name="pay" value="2" class="idcard">银联
                 <input type="radio" name="pay" value="3">货到付款（现金）
                 <input type="radio" name="pay" value="4">会员资金账户<br>
