--- a/src/main/resources/templates/suc.html
+++ b/src/main/resources/templates/suc.html
@@ -13,12 +13,32 @@
         }
 
     </style>
+
 </head>
 <body>
 
 <header id="header"></header>
 <section id="section">
 
+    <body>
+    <center>
+        <br>
+        <br>
+        <br>
+        <br>
+        <font size="7" color="green">支付成功！
+            <br>
+            <br>
+        </font>
+        <font size="4">五秒钟后将自动跳转至首页,</font>
+        <font size="3">如未自动跳转，点击</font>
+        <a href="index.html">
+            <font size="6">这里</font>
+        </a>
+        <font size="5">！！</font>
+    </center>
+    </center>
+    </body>
 
 </section>
 
